# ivt-hairpinstat

./: .gitignore  LICENSE  README.md  pyproject.toml
data/coefficients/: dna24_coefficients.json  dna24_enhanced.json
data/models/: gnn_state_dict_ancient-sound-259.pt
scripts/: benchmark_tm_methods.py  benchmark_vs_vienna.py  extract_coefficients.py  random_oligo_tm_comparison.py  train_coefficients.py  train_enhanced.py
src/ivt_hairpinstat/: __init__.py
src/ivt_hairpinstat/cli/: __init__.py  main.py
src/ivt_hairpinstat/core/: __init__.py  feature_extractor.py  gnn_predictor.py  predictor.py  structure_parser.py  thermodynamics.py
tests/: test_predictor.py
